
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.90

   * initial support for display lists -- not yet enabled by default

   * partial surface calculations are now much much faster

   * intensive optimization of ray tracer, incl. inlining

   * updated online documentation & tests for the following commands
      feedback
      extend
      alias
      (python_help)
      get_view
      view
      scene

Changes up to 0.89
   
   * Fixed major session save and restore bugs

   * Updated ExtensionClass for improved Python 2.2 and 2.3 compatibility.

   * Improving hash-table construction performance in ray tracer.
   
   * Added CPU and RAM autodetection for OSX Mac

   * Added multithreading support to raytracter (set max_threads,n)

   * Fixed various bugs on Mac including TAB-crash in external GUI
   
Changes up to 0.88

   * fixed numerous bugs

   * validated current test suite and source code build against:
        Linux, Win32, IRIX, Mac OSX, and OSF

   * new cartoon settings controls & tweaks

   * reinit command

   * Moved demo code into a Wizard

   * Fixed an ancient memory trasher bug in Isosurface, thank God for
     test cases! 

   * Wizards, as Python objects, are now saved with sessions! : )

   * Wizard stack

   * scene annotation

   * tearoff menus

   * pdb_standard_order setting 

   * calibrated CGO line widths to produce consistent results

   * added color support to scenes

   * updated demonstrations

   * fixed suspend_updates setting

   * added map support to roving facility

   * enabled distance objects to persist through redefinition

   * fixed various geometry and rendering glitches with cartoon ribbons
