@@ -83,6 +83,7 @@ The PyMOL Team:
       Bjorn Kauppi
       Greg Landrum
       Robert Lawrence Kehrer 
+      Tom Lee
       Eugen Leitl
       Ken Lind
       Luca Jovine
